# MedMNIST

./: .gitignore  lightning_implementation.py  nb.ipynb  pyproject.toml  run_initial_test.sh  run_lightning_implementation.sh  run_lightning_test.sh  run_original_benchmark.sh  setup.py
examples/: dataset_without_pytorch.py
kfold_splitters/dermamnist/: k5_splitter.pkl
medmnist/: __init__.py  __main__.py  evaluator.py  utils.py
original_benchmarks/: train_and_eval_pytorch.py
