[project]
name = "medmnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pytorch-lightning>=2.5.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]
